Fixed overflow on small screens.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -19,9 +19,13 @@
     color: var(--bs-gray-800);
 }
 
-h1, h2, h3, h4, h5, h6, p, hr, time, .contained, pre, blockquote {
+h1, h2, h3, h4, h5, h6, p, ol, ul, hr, time, .contained, pre, blockquote {
     width: var(--containedWidth) !important;
     max-width: 800px; 
+}
+
+.navbar-collapse > ul {
+    width: auto !important;
 }
 
 .fullWidth {
@@ -69,6 +73,10 @@ h3::after {
 
 h4 {
     margin-top: 10px;
+}
+
+li > h4 {
+    width: auto !important;
 }
 
 .title {
@@ -199,6 +207,11 @@ footer {
 @media only screen and (max-width: 600px) {
     :root {
         --containedWidth: 95vw;
+    }
+
+    .navbar > div {
+        padding-right: 0;
+        padding-left: 0;
     }
 
     .title {
